--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,10 +3,17 @@
       force: true
       relink: true
 
-- clean: ["~", "~/.oh-my-zsh/custom/", "~/.oh-my-zsh/custom/plugins/"]
+- clean:
+    - "~"
+    - ~/.oh-my-zsh/custom/
+    - ~/.oh-my-zsh/custom/plugins/
+    - ~/.oh-my-zsh/custom/themes/
 
 - shell:
-    - sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+    - command: ./preinstall.sh
+      stdin: true
+      stdout: true
+      stderr: true
 
 - link:
     ~/.editorconfig: .editorconfig
@@ -14,12 +21,13 @@
     ~/.p10k.zsh: .p10k.zsh
     ~/.zshrc: .zshrc
     ~/.oh-my-zsh/custom/aliases.zsh: .oh-my-zsh/custom/aliases.zsh
-    ~/.oh-my-zsh/custom/exports.zsh: .oh-my-zsh/custom/exports.zsh
     ~/.oh-my-zsh/custom/plugins/nx-completion: .oh-my-zsh/custom/plugins/nx-completion/
     ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions: .oh-my-zsh/custom/plugins/zsh-autosuggestions/
     ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting: .oh-my-zsh/custom/plugins/zsh-syntax-highlighting/
     ~/.oh-my-zsh/custom/themes/powerlevel10k: .oh-my-zsh/custom/themes/powerlevel10k/
 
 - shell:
-    - rm -f ~/.zshrc.pre-oh-my-zsh*
+    - command: ./postinstall.sh
+      stdout: true
+      stdin: true
     - exec zsh
