--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,8 @@
     - ~/.oh-my-zsh/custom/
     - ~/.oh-my-zsh/custom/plugins/
     - ~/.oh-my-zsh/custom/themes/
+    - ~/.oh-my-zsh/custom/themes/
+    - ~/Library/Application Support/Code - Insiders/User/
 
 - shell:
     - command: ./preinstall.sh
@@ -16,6 +18,7 @@
       stderr: true
 
 - link:
+    ~/.bashrc: .bashrc
     ~/.editorconfig: .editorconfig
     ~/.gitconfig: .gitconfig
     ~/.p10k.zsh: .p10k.zsh
@@ -25,6 +28,7 @@
     ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions: .oh-my-zsh/custom/plugins/zsh-autosuggestions/
     ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting: .oh-my-zsh/custom/plugins/zsh-syntax-highlighting/
     ~/.oh-my-zsh/custom/themes/powerlevel10k: .oh-my-zsh/custom/themes/powerlevel10k/
+    ~/Library/Application Support/Code - Insiders/User/settings.json: Library/Application Support/Code - Insiders/User/settings.json
 
 - shell:
     - command: ./postinstall.sh
