--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,17 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
+indent_style = tab
 charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = true
 
 [*.{sh,zsh}]
+indent_style = space
 indent_size = 2
 
 [.zshrc]
+indent_style = space
 indent_size = 2
 
 [*.{yml,yaml,groovy}]
