--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,7 +9,7 @@
     - ~/.oh-my-zsh/custom/plugins/
     - ~/.oh-my-zsh/custom/themes/
     - ~/.oh-my-zsh/custom/themes/
-    - ~/Library/Application Support/Code - Insiders/User/
+    - ~/Library/Application Support/Code/User/
 
 - shell:
     - command: ./preinstall.sh
@@ -28,7 +28,7 @@
     ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions: .oh-my-zsh/custom/plugins/zsh-autosuggestions/
     ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting: .oh-my-zsh/custom/plugins/zsh-syntax-highlighting/
     ~/.oh-my-zsh/custom/themes/powerlevel10k: .oh-my-zsh/custom/themes/powerlevel10k/
-    ~/Library/Application Support/Code - Insiders/User/settings.json: Library/Application Support/Code - Insiders/User/settings.json
+    ~/Library/Application Support/Code/User/settings.json: Library/Application Support/Code/User/settings.json
 
 - shell:
     - git submodule update --init --recursive
