feat: change font, combine vscode insiders settings

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -31,7 +31,7 @@
     ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting: .oh-my-zsh/custom/plugins/zsh-syntax-highlighting/
     ~/.oh-my-zsh/custom/themes/powerlevel10k: .oh-my-zsh/custom/themes/powerlevel10k/
     ~/Library/Application Support/Code/User/settings.json: Library/Application Support/Code/User/settings.json
-    ~/Library/Application Support/Code - Insiders/User/settings.json: Library/Application Support/Code - Insiders/User/settings.json
+    ~/Library/Application Support/Code - Insiders/User/settings.json: Library/Application Support/Code/User/settings.json
 
 - shell:
     - git submodule update --init --recursive
